--- a/08-journal-app/src/styles/components/_buttons.scss
+++ b/08-journal-app/src/styles/components/_buttons.scss
@@ -6,8 +6,14 @@
     font-size: 12px;
     padding:  7px 10px 7px 10px;
 
-    &.focus {
+    &:focus {
         outline: none;
+    }
+
+    transition: color .3s ease;
+
+    &:hover {
+        color: darken($color: white, $amount: 10);
     }
 }
 
