--- a/09-calendar-app/src/styles.css
+++ b/09-calendar-app/src/styles.css
@@ -53,3 +53,12 @@ html, body {
     outline: none;
     padding: 10px;
 }
+
+/* DatePicker */
+.react-datetime-picker input:focus {
+    outline: none;
+}
+
+.react-datetime-picker__wrapper {
+    border: 1px solid gray !important;
+}
