--- a/09-calendar-app/src/styles.css
+++ b/09-calendar-app/src/styles.css
@@ -62,3 +62,13 @@ html, body {
 .react-datetime-picker__wrapper {
     border: 1px solid gray !important;
 }
+
+/* FABS (Floating action button)*/
+.fab{
+    border-radius: 100%;
+    bottom: 25px;
+    font-size: 30px;
+    padding: 25px;
+    position: fixed;
+    right: 25px;
+}
