--- a/09-calendar-app/src/styles.css
+++ b/09-calendar-app/src/styles.css
@@ -72,3 +72,11 @@ html, body {
     position: fixed;
     right: 25px;
 }
+
+.fabDanger{
+    bottom: 25px;
+    font-size: 30px;
+    padding: 10px;
+    position: fixed;
+    left: 25px;
+}
